# turing-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.py
outputs/: 4statebeaver0.out  bin2dec0.out  bin2dec1.out  bin2dec2.out  binaryadd0.out  binaryadd1.out  binaryadd2.out  binarymult0.out  binarymult1.out  binarymult2.out  concatenate0.out  gcd0.out  gcd1.out  gcd2.out  palindrome_detector_2tapes0.out  palindrome_detector_2tapes1.out  palindrome_detector_2tapes2.out  parentheses0.out  parentheses1.out  parentheses2.out  primetest0.out  primetest1.out  reversepolishboolean0.out  reversepolishboolean1.out  reversepolishboolean2.out
programs/: case1.tm  case2.tm
report/: report.tex
testcases/: 4statebeaver.tm  bin2dec.tm  binaryadd.tm  binarymult.tm  concatenate.tm  gcd.tm  parentheses.tm  primetest.tm  reversepolishboolean.tm
turing-project/: main.cpp  parse.cpp  parse.h  run.cpp  run.h  state.h  tape.cpp  tape.h  tm.cpp  tm.h
